--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">MultiTouch</string>
     <string name="about">About…</string>
-    <string name="num_touches">Touches detected: %s</string>
+    <string name="num_touches">Touches detected: %d</string>
     <string name="str_about">Test utility for multi–touch screens in Android.\n\nCopyright © Dmitry Brant, 2013–2022</string>
 </resources>
